<resources>
    <string name="app_name">2048.vim</string>
    <string name="resume">Resume</string>
    <string name="start">Start</string>
    <string name="about">About</string>
    <string name="exit">Exit</string>
    <string name="reset">Reset</string>

    <string name="savedata_broken_hint">Saved map is broken, start a new game instead.</string>

    <string name="about_this_game_title">ABOUT THIS GAME</string>
    <string name="about_this_game_content">This game is created occasionally.\n\nOne day my dorm mate is cleaning up his bookshelf, reviewing an old Android book named 《Android Heroes Biography》(Android群英传). Its appendix contains a codelab teaching you to build up a 2048 game hand by hand, which suddenly recall me back to days learning that book when I was an freshman on Android. \n\nThat is inspired me a lot. I always remind me that the best way to learn something is making it yourself. \"What I cannot create, I do not understand\", Feynman said. So I spent around 2 days finishing this 2048 game with only system-provided UI components. Hoping that this game can bring you fun and, some guide to your life.</string>

    <string name="your_score">Your Score</string>
    <string name="highest_score">Highest Score</string>
</resources>