<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:fitsSystemWindows="true"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/game_background"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:clipChildren="false"
        android:clipToPadding="false"
        tools:context=".MainActivity">

    <LinearLayout android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:layout_alignParentTop="true"
                  android:layout_alignParentEnd="true"
                  android:layout_marginTop="16dp"
                  android:layout_marginEnd="16dp"
                  android:orientation="horizontal">

        <com.nemesiss.dev.vim2048.view.ScoreBoard android:layout_width="wrap_content"
                                                  android:layout_height="wrap_content"
                                                  android:background="@drawable/round_container_background"
                                                  android:id="@+id/your_score"
                                                  android:orientation="vertical"
                                                  android:layout_marginEnd="16dp"
                                                  android:gravity="center_horizontal"
                                                  app:title="@string/your_score"/>

        <com.nemesiss.dev.vim2048.view.ScoreBoard android:layout_width="wrap_content"
                                                  android:layout_height="wrap_content"
                                                  android:background="@drawable/round_container_background"
                                                  android:orientation="vertical"
                                                  android:id="@+id/highest_score"
                                                  android:gravity="center_horizontal"
                                                  app:title="@string/highest_score"/>
    </LinearLayout>

    <com.nemesiss.dev.vim2048.view.GameBoardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:padding="2dp"
            android:background="@color/board_background"
            android:id="@+id/game_board_view"
            android:layout_centerInParent="true"
            app:size="4"/>

    <Button android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:textSize="16sp"
            android:id="@+id/reset"
            android:text="@string/reset"
            android:onClick="reset"
            android:paddingStart="25dp"
            android:paddingEnd="25dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:layout_below="@id/game_board_view"
            android:layout_centerHorizontal="true"/>

</RelativeLayout>