<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/board_background"
        tools:context=".WelcomeActivity">

    <GridLayout android:layout_width="200dp"
                android:padding="8dp"
                android:clipChildren="false"
                android:clipToPadding="false"
                android:rowCount="2"
                android:columnCount="2"
                android:layout_height="200dp"
                android:background="@drawable/round_container_background"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintVertical_bias="0.2" android:id="@+id/gridLayout">

        <com.nemesiss.dev.crossingcontainermovement.view.NumericElement
                android:background="@color/container_background"
                android:layout_margin="4dp"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:elevation="4dp"
                android:clickable="true"
                android:focusable="true"
                app:value="2"/>

        <com.nemesiss.dev.crossingcontainermovement.view.NumericElement
                android:background="@color/container_background"
                android:layout_margin="4dp"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:elevation="4dp"
                android:clickable="true"
                android:focusable="true"
                app:value="0"/>
        <com.nemesiss.dev.crossingcontainermovement.view.NumericElement
                android:background="@color/container_background"
                android:layout_margin="4dp"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:elevation="4dp"
                android:clickable="true"
                android:focusable="true"
                app:value="4"/>
        <com.nemesiss.dev.crossingcontainermovement.view.NumericElement
                android:background="@color/container_background"
                android:layout_margin="4dp"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:elevation="4dp"
                android:clickable="true"
                android:focusable="true"
                app:value="8"/>
    </GridLayout>

    <LinearLayout android:orientation="vertical"
                  android:padding="30dp"
                  android:layout_height="wrap_content"
                  android:clipToPadding="false"
                  android:clipChildren="false"
                  android:layout_width="wrap_content"
                  android:gravity="center_horizontal" app:layout_constraintTop_toBottomOf="@+id/gridLayout"
                  app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
                  app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.63">

        <Button android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/WelcomeButton"
                app:icon="@drawable/baseline_restart_alt_white_24dp"
                android:backgroundTint="@color/color_32"
                android:id="@+id/resume"
                android:onClick="resumeGame"
                android:text="@string/resume"/>

        <Button android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/color_16"
                style="@style/WelcomeButton"
                app:icon="@drawable/baseline_play_arrow_white_24dp"
                android:id="@+id/start"
                android:onClick="startGame"
                android:text="@string/start"/>

        <Button android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/color_1024"
                style="@style/WelcomeButton"
                android:id="@+id/exit"
                android:onClick="exitGame"
                app:icon="@drawable/baseline_arrow_back_white_24dp"
                android:text="@string/exit"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>